it will update styling of the user interface, need to fix calendar responsiveness on mobile screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-h1 {
+h1, h5 {
   text-align: center;
 }
 
@@ -12,7 +12,7 @@ body {
 
 
 .weekdays {
-    margin: 30;
+    margin: 0px;
     padding: 10px 0;
     background-color:#ddd;
     text-align: center;
@@ -26,20 +26,20 @@ body {
 }
 
 .days {
-    padding: 50;
+    padding: 30px;
     background: #eee;
-    margin: 0;
+    margin: 0px;
 }
 
 .days li {
     list-style-type: none;
     display: inline-block;
-    width: 13.6%;
+    width: 13.9%;
     text-align: center;
     margin-bottom: 1px;
     font-size:12px;
     color: gray;
     list-style-position: inside;
     border: 1px solid black;
-    padding: 40px;
+    padding: 70px;
 }
